# agent-vpc-demo

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.cloudbuild/: deploy-to-prod.yaml  pr_checks.yaml  staging.yaml
backend/: agent.py  fast_api_app.py
backend/.adk/: session.db
backend/app_utils/: telemetry.py  typing.py
deployment/: README.md
deployment/terraform/: apis.tf  build_triggers.tf  firewall.tf  github.tf  iam.tf  loadbalancer.tf  locals.tf  network.tf  providers.tf  service.tf  service_accounts.tf  storage.tf  telemetry.tf  variables.tf
deployment/terraform/dev/: apis.tf  firewall.tf  iam.tf  network.tf  service.tf  variables.tf
docs/: implementation_summary.md  network.md  network_security.md  sdd.md
frontend/: Dockerfile  server.py
frontend/static/: app.js  index.html  style.css
tests/integration/: test_agent.py  test_server_e2e.py
tests/load_test/: load_test.py
