[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=8.3.4,<9.0.0",
  "pytest-asyncio>=0.23.8,<1.0.0",
  "nest-asyncio>=1.6.0,<2.0.0"
]

[project]
name = "agent-vpc-demo"
version = "0.1.0"
description = ""
authors = [
  {name = "Your Name", email = "your@email.com"}
]
dependencies = [
  "google-adk>=1.15.0,<2.0.0",
  "opentelemetry-instrumentation-google-genai>=0.1.0,<1.0.0",
  "gcsfs>=2024.11.0",
  "google-cloud-logging>=3.12.0,<4.0.0",
  "google-cloud-aiplatform[evaluation]>=1.130.0",
  "fastapi>=0.115.8,<1.0.0",
  "uvicorn~=0.34.0",
  "httpx>=0.28.0,<1.0.0",
  "pre-commit>=4.5.1"
]
requires-python = ">=3.10,<3.14"

[project.optional-dependencies]
jupyter = [
  "jupyter>=1.0.0,<2.0.0"
]
eval = [
  "google-adk[eval]>=1.15.0,<2.0.0"
]
lint = [
  "ruff>=0.4.6,<1.0.0",
  "ty>=0.0.1a0",
  "codespell>=2.2.0,<3.0.0"
]

[tool.codespell]
ignore-words-list = "rouge"
skip = "./locust_env/*,uv.lock,.venv,./frontend,**/*.ipynb,**/package-lock.json"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
  "E", # pycodestyle
  "F", # pyflakes
  "W", # pycodestyle warnings
  "I", # isort
  "C", # flake8-comprehensions
  "B", # flake8-bugbear
  "UP", # pyupgrade
  "RUF" # ruff specific rules
]
ignore = ["E501", "C901", "B006"] # ignore line too long, too complex

[tool.ruff.lint.isort]
known-first-party = ["backend", "frontend"]

[tool.ty]

[tool.ty.environment]
python-version = "3.10"

[tool.ty.rules]
# Ignore common issues with third-party libraries and dynamic code patterns
unresolved-import = "ignore"
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
invalid-return-type = "ignore"
possibly-missing-attribute = "ignore"
not-subscriptable = "ignore"
deprecated = "ignore"

[tool.ty.src]
exclude = [".venv/**", "notebooks/**"]
